Fixed cohorts navigation layout, modified path display to truncate after two folders deep

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -165,12 +165,6 @@
     width: 25px;
 }
 
-.spacer {
-    -webkit-box-flex: 1;
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto;
-}
-
 .mat-tab-body {
     padding-top: 10px;
 }
@@ -180,9 +174,9 @@
 }
 
 .panel-container {
-  width: 500px;
+  width: 400px;
   min-width: 380px;
-  max-width: 500px;
+  max-width: 400px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -200,4 +194,32 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.file-container {
+    width: 400px;
+    min-width: 380px;
+    max-width: 400px;
+    display: flex;
+    flex-flow: column;
+    flex: 0, 0, auto;
+}
+
+.file-item {
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    flex: 0, 0, auto;
+}
+
+.spacer {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+}
+
+.middle {
+    vertical-align: middle;
 }
